--- a/index_v2.html
+++ b/index_v2.html
@@ -36,8 +36,8 @@
             <div id="left_div">
                 <div id="left_in_div">
                     <table>
-                        <tr><th id="quest_card">1</th><th id="quest_card">2</th><th id="quest_card">3</th><th id="quest_card">4</th><th id="quest_card">5</th></tr>
-                        <tr><th id="quest_card">6</th><th id="quest_card">7</th><th id="quest_card">8</th><th id="quest_card">9</th><th id="quest_card">10</th></tr>
+                        <tr><th id="quest_card">1</th><th id="quest_card">2</th><th id="quest_card">3</th><th id="quest_card">4</th><th id="quest_card">5</th>
+                        <th id="quest_card">6</th><th id="quest_card">7</th><th id="quest_card">8</th><th id="quest_card">9</th><th id="quest_card">10</th></tr>
                     </table>
                   <!-- <span class="card col-6">1</span><span class="card col-6">2</span>
                     </div>
@@ -55,6 +55,7 @@
                     </div>--> 
                  </div>
                 <h3>Provide a summary of the results and include the following:</h3>
+                <div id="sum_div">
                <table>
                     <thead>
                        <tr>
@@ -85,6 +86,7 @@
                        </tr>
                    </tbody>
                </table>
+            </div>
          </div>
         <div id="right_div">
             <h5>Question #1</h5>
