--- a/index_v2.html
+++ b/index_v2.html
@@ -67,7 +67,7 @@
                             </tr>
                         </table>
                     </div>               
-                </div>
+                </div> <!-- End of left_div -->
             
          
                 <div id="right_div">
@@ -149,6 +149,8 @@
         <h5>&copy; Copyright 2021 F. Marble, G. Henderson, P. Fulfs</h5>
     </div>
 </body>
+
+<!-- JavaScript-->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="./site.js"></script>
 </html>
