--- a/index_v2.html
+++ b/index_v2.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="stylesheet.css">
     
-    <div class="navbar">
+    <div class="navbar center_content">
         <div class="nav_item"> 
             <figure>
                 <a href=""><h4>Team Cho Chang</h4></a>
@@ -33,7 +33,7 @@
         </div>
         <br>
             <div>
-                <div id="title">
+                <div id="title" class="center_content">
                     <img class="logo" style="float:left;" src="images/raven-claw-logo.png">
                     <h1 style="display:inline">JavaScript Trivia</h1>
                     <img class="logo" src="images/raven-claw-logo.png">
