--- a/index_v2.html
+++ b/index_v2.html
@@ -44,7 +44,18 @@
             <div class="body">
                 <div id="left_div">
                     <div id="left_in_div">
-                        <table id="quest_cards">
+                        <div>1</div>
+                        <div>2</div>
+                        <div>3</div>
+                        <div>4</div>
+                        <div>5</div>
+                        <div>6</div>
+                        <div>7</div>
+                        <div>8</div>
+                        <div>9</div>
+                        <div>10</div>
+
+                        <!--<table id="quest_cards">
                             <tr>
                                 <th>1</th>
                                 <th>2</th>
@@ -65,7 +76,7 @@
                                 <th>9</th>
                                 <th>10</th>
                             </tr>
-                        </table>
+                        </table> -->
                     </div>               
                 </div> <!-- End of left_div -->
             
