quick edit to index & style - rename body

--- a/index_v2.html
+++ b/index_v2.html
@@ -41,7 +41,7 @@
             </div>
 
             <h5>Single Page Application using Knockout.js</h5>
-            <div class="body">
+            <div class="body-panel">
                 <div id="left_div">
                     <div id="left_in_div">
                         <div>1</div>
