left_div hover changes; left-align multiple choice

--- a/index_v2.html
+++ b/index_v2.html
@@ -77,7 +77,7 @@
                                 <th>10</th>
                             </tr>
                         </table> -->
-                    </div>               
+                    </div>   
                 </div> <!-- End of left_div -->
             
          
@@ -162,6 +162,7 @@
 </body>
 
 <!-- JavaScript-->
+<script src="./knockout-3.5.1.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script src="./site.js"></script>
+<script src="./site.js" type="module"></script>
 </html>
