--- a/index_v2.html
+++ b/index_v2.html
@@ -117,31 +117,31 @@
                         <button id="backBtn">Go Back to questions</button>
                     </div>
                     <div id="question">
-                        <h5 data-bind="text: question.title"></h5>
-                        <p id="question" data-bind="text: question.text"></p>
+                        <h5 data-bind="text: question.title">Question #1</h5>
+                        <p id="question" data-bind="text: question.text">1. Inside which HTML element do we put the JavaScript?</p>
                         <table id="multipleChoice">
                             <tr>
                                 <td><label>
                                 <input class="form-check-input me-1" type="radio" name="question" value="">
-                                a) <span data-bind="text: question.multipleChoice.a1"></span>
+                                a) <span data-bind="text: question.multipleChoice.a1">&lt;javascript&gt;</span>
                                 </label></td>
                             </tr>
                             <tr>
                                 <td><label>
                                 <input class="form-check-input me-1" type="radio" name="question" value="">
-                                b) <span data-bind="text: question.multipleChoice.a2"></span>
+                                b) <span data-bind="text: question.multipleChoice.a2">&lt;js&gt;</span>
                                 </label></td>
                             </tr>
                             <tr>
                                 <td><label>
                                 <input class="form-check-input me-1" type="radio" name="question" value="">
-                                c) <span data-bind="text: question.multipleChoice.a3"></span>
+                                c) <span data-bind="text: question.multipleChoice.a3">&lt;script&gt;</span>
                                 </label></td>
                             </tr>
                             <tr>
                                 <td><label>
                                 <input class="form-check-input me-1" type="radio" name="question" value="">
-                                d) <span data-bind="text: question.multipleChoice.a4"></span>
+                                d) <span data-bind="text: question.multipleChoice.a4">&lt;scripting&gt;</span>
                                 </label></td>
                             </tr>
                         </table>
