edits to js, html, stylesheet

--- a/index_v2.html
+++ b/index_v2.html
@@ -83,7 +83,7 @@
          
                 <div id="right_div">
                     <div id="sum_div" style="display: none;" data-bind="style: { display: done() ? 'block' : 'none' }">
-                        <h3>Provide a summary of the results and include the following:</h3>
+                        <h3>Summary of the results:</h3>
                         <table>
                             <thead>
                                 <tr>
