Fixed resetTrivia Button

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="navbar center_content">
         <div class="nav_item"> 
             <figure>
-                <a href=""><h4>Team Cho Chang</h4></a>
+                <a href="https://github.com/marblef2/Team_Cho_Chang" target="_blank"><h4>Team Cho Chang GitHub</h4></a>
             </figure>
         </div>
         <div class="nav_item"> 
