Added code attribution

--- a/index.html
+++ b/index.html
@@ -1,3 +1,10 @@
+<!----------------------------
+; Title: Homepage
+; Author: Perry Fulfs
+; Date: 21 January 2021
+; Modified By: Fred Marble, George Henderson
+; Description: This is the homepage of the trivia application.
+;---------------------------->
 <!doctype html>
 
 <html lang="en">
