--- a/index.html
+++ b/index.html
@@ -11,9 +11,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Team Cho Chang - Group Project - WEB330">
     <meta name="author" content="Fred, George, Perry">
-    <title>Team Cho Chang - Group Project - WEB330</title>
+    <title>JavaScript Trivia</title>
     <!--Link to the Google Fonts Text to use-->
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@700&display=swap" rel="stylesheet"> 
     <link rel="stylesheet" href="stylesheet.css">
@@ -21,7 +20,7 @@
     <div class="navbar center_content">
         <div class="nav_item"> 
             <figure>
-                <a href="https://github.com/marblef2/Team_Cho_Chang" target="_blank"><h4>Team Cho Chang GitHub</h4></a>
+                <a href="https://github.com/GH94GitHub/JavaScript-Trivia" target="_blank"><h4>GitHub</h4></a>
             </figure>
         </div>
         <div class="nav_item"> 
@@ -34,15 +33,11 @@
 </head>
 <body>
     <div id="container">
-        <div id="header">        
-            <h1 id="authors">Group Project >> Fred Marble, George Henderson, & Perry Fulfs.</h1>
-            <hr>
-        </div>
         <br>
             <div>
                 <div id="title" class="center_content">
                     <img class="logo" style="float:left;" src="images/raven-claw-logo.png">
-                    <h1 style="display:inline">JavaScript Trivia</h1>
+                    <h1 class="dancing-font" style="display:inline">JavaScript Trivia</h1>
                     <img class="logo" src="images/raven-claw-logo.png">
                 </div>
             </div>
@@ -129,7 +124,7 @@
     </div>
     
     <div id="footer">
-        <h5>&copy; Copyright 2021 F. Marble, G. Henderson, P. Fulfs</h5>
+        <h5>&copy; Copyright @2024 G. Henderson, F. Marble, P. Fulfs</h5>
     </div>
 </body>
 
